[package]
name = "pixel-arena"

version.workspace = true
edition.workspace = true

[dependencies]
kt_common.workspace = true
kt_core.workspace = true
kt_movement.workspace = true
kt_util.workspace = true

bevy.workspace = true
bevy_rapier2d.workspace = true
bevy-parallax.workspace = true
bevy_framepace.workspace = true
# bevy_save.workspace = true
bevy_tweening = { workspace = true, features = ["bevy_asset", "bevy_sprite", "bevy_ui", "bevy_text"] }
bevy_ecs_ldtk = { workspace = true, features = ["atlas"] }

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.1-dev"
edition = "2021"

[workspace.dependencies]
# Local
kt_common = { path = "crates/common" }
kt_core = { path = "crates/core" }
kt_movement = { path = "crates/movement" }
kt_util = { path = "crates/util" }

# Rest
bevy = "0.11.2"
bevy_prototype_debug_lines = "0.11"
bevy_tweening = "0.8"
bevy_rapier2d = "0.22"
bevy_prototype_lyon = "0.9"
rand = "0.8.5"
bevy-inspector-egui = "0.20"
lyon = "1.0.1"
bevy_ecs_ldtk = "0.8.0"
bevy_xpbd_2d = "0.2"
bevy-parallax = "0.6.1"
bevy_framepace = "0.13.4"
# bevy_save = "0.9.3"
